--- a/packs/maven/pipeline.yaml
+++ b/packs/maven/pipeline.yaml
@@ -9,8 +9,8 @@ pipelines:
       steps:
       - sh: mvn versions:set -DnewVersion=$PREVIEW_VERSION
         name: set-version
-      - sh: mvn install
-        name: mvn-install
+      - sh: mvn install -DskipTests
+        name: mvn-install-skip-tests
   release:
     setVersion:
       steps:
@@ -23,5 +23,5 @@ pipelines:
         name: tag-version
     build:
       steps:
-      - sh: mvn clean deploy
-        name: mvn-deploy
+      - sh: mvn clean deploy -DskipTests
+        name: mvn-deploy-skip-test
